<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.homework9_parta.SignUp">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:id="@+id/first_name"
        android:hint="@string/first_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="19dp"
        android:id="@+id/last_name"
        android:hint="@string/last_name"
        android:layout_below="@+id/first_name"
        android:layout_alignLeft="@+id/first_name"
        android:layout_alignStart="@+id/first_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_choose"
        android:hint="@string/choose_password"
        android:layout_below="@+id/email_signup"
        android:layout_alignLeft="@+id/email_signup"
        android:layout_alignStart="@+id/email_signup"
        android:layout_marginTop="18dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_repeat"
        android:hint="@string/repeat_password"
        android:layout_below="@+id/password_choose"
        android:layout_alignLeft="@+id/password_choose"
        android:layout_alignStart="@+id/password_choose"
        android:layout_marginTop="16dp" />

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCancel"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/radioSex"
        android:layout_alignStart="@+id/password_repeat" />

    <Button
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_signup"
        android:layout_alignBaseline="@+id/buttonCancel"
        android:layout_alignBottom="@+id/buttonCancel"
        android:layout_alignRight="@+id/password_repeat"
        android:layout_alignEnd="@+id/password_repeat" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="18dp"
        android:id="@+id/email_signup"
        android:hint="@string/email"
        android:layout_below="@+id/last_name"
        android:layout_alignLeft="@+id/last_name"
        android:layout_alignStart="@+id/last_name" />

    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_repeat"
        android:gravity="center"
        android:weightSum="1">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_male" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:text="@string/radio_female" />

    </RadioGroup>

    <Button
        android:id="@+id/googleSignInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonCancel"
        android:layout_centerHorizontal="true"
        android:text="Google SignIn" />


</RelativeLayout>
