<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.homework9_parta.MainActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLogin"
        android:text="@string/Login"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="78dp" />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSignUp"
        android:text="@string/sign_up"
        android:layout_marginRight="44dp"
        android:layout_alignBaseline="@+id/buttonLogin"
        android:layout_alignBottom="@+id/buttonLogin"
        android:layout_toEndOf="@+id/buttonLogin"
        android:layout_marginStart="55dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center" />
</RelativeLayout>
